--- a/3_working_paper_outputs.qmd
+++ b/3_working_paper_outputs.qmd
@@ -657,22 +657,6 @@ mapping <- c(
 ```
 
 ```{r}
-# collect_coef_names <- function(models) {
-#   sort(unique(unlist(lapply(models, function(m){
-#     ch <- tryCatch(names(coef(m)), error = function(e) NULL)
-#     if (is.null(ch)) {
-#       td <- tryCatch(tidy(m)$term, error = function(e) NULL)
-#       ch <- if (!is.null(td)) as.character(td) else character(0)
-#     }
-#     ch
-#   }))))
-# }
-# 
-# collect_coef_names(list(unemp_m3_hlm))
-
-```
-
-```{r}
 library(broom)  
 
 # Helper to build coef_map with custom labels & order
@@ -776,24 +760,6 @@ coef_map <- build_coef_map_ordered(list(unemp_m1_plm,
 ```
 
 
-Adding reference category rows
-```{r}
-rows_to_add <- tribble(
-  ~term, ~m1, ~m2, ~m3, ~m4, ~m5, ~m6, ~m7, ~m8, ~m9, ~m10,
-  "Employed (Reference)", "", "", "", "", "", "", "", "", "", "", #1
-  "White (Reference)", "", "", "", "", "", "", "", "", "", "", #3
-  "Prior Industry Experience: No (Reference)", "", "", "", "", "", "", "", "", "", "", #5
-  "Male (Reference)", "", "", "", "", "", "", "", "", "", "", # 8
-  "US Born (Reference)", "", "", "", "", "", "", "", "", "", "", #12
-  "Not Married (Reference)", "", "", "", "", "", "", "", "", "", "", #14
-  "Not Parent(Reference)", "", "", "", "", "", "", "", "", "", "", #16
-  "High School or Less (Reference)", "", "", "", "", "", "", "", "", "", "", # 18
-  "Professional, Scientific, and Management, and Administrative, and Waste Management Services (Reference)", "", "", "", "", "", "", "", "", "", "", 
-  "Calendar Year: 2014 (Reference)", "", "", "", "", "", "", "", "", "", "" 
-  )
-attr(rows_to_add, 'position') <- c(1, 3, 5, 8, 12, 14, 16, 18, 23, 36)
-```
-
 
 ```{r}
 tbl4_unemp_models_rse <- modelsummary(list(unemp_m1_plm,
@@ -807,10 +773,9 @@ tbl4_unemp_models_rse <- modelsummary(list(unemp_m1_plm,
                                            unemp_m9_plm,
                                            unemp_m10_plm), 
                                       coef_map = coef_map,
-                                      add_rows = rows_to_add,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 4 Robust SE Unemployment predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -909,10 +874,9 @@ tbl5_status_models_rse <- modelsummary(list(status_m1_plm,
                                            status_m9_plm,
                                            status_m10_plm), 
                                       coef_map = coef_map_status,
-                                      add_rows = rows_to_add_status,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 5 Robust SE Y1 Status predicting Log Annual Earnings", 
                                       output = "huxtable",
                                       notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -993,10 +957,9 @@ tbl6_unemp_models_rse <- modelsummary(list(unemp3_m1_plm,
                                            unemp3_m9_plm,
                                            unemp3_m10_plm), 
                                       coef_map = coef_map_unemp3,
-                                      add_rows = rows_to_add, # safe to use the original rows here 
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 6 Robust SE Unemployment 3+ predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -1041,10 +1004,9 @@ tbl7_unemp_ws_models <- modelsummary(list(unemp_ws_m1,
                                           unemp_ws_m10), 
                                      ## safe to use the original coef_map and rows_to add since only the sample has changed for this one
                                       coef_map = coef_map,
-                                      add_rows = rows_to_add,
-                                      estimate = "{estimate} ({std.error}){stars}",
+                                      estimate = "{estimate}{stars}",
                                       vcov = "robust",
-                                      statistic = NULL,
+                                      statistic = "({std.error})",
                                       title = "Table 7 Unemployment predicting Log Annual Earnings", 
                                       output = "huxtable",
                                        notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -1132,9 +1094,8 @@ tbl4_unemp_hlm <- modelsummary(list(unemp_m1_hlm,
                                     unemp_m9_hlm,
                                     unemp_m10_hlm), 
                                coef_map = coef_map, 
-                               add_rows = rows_to_add, 
-                               estimate = "{estimate} ({std.error}){stars}",
-                               statistic = NULL,
+                               estimate = "{estimate}{stars}",
+                               statistic = "({std.error})",
                                title = "Table 4 HLM: Unemployment predicting Log Annual Earnings", 
                                output = "huxtable",
                                notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
@@ -1183,7 +1144,6 @@ tbl5_status_hlm <- modelsummary(list(status_m1_hlm,
                                      status_m9_hlm,
                                      status_m10_hlm), 
                                 coef_map = coef_map_status, 
-                                add_rows = rows_to_add_status,
                                 estimate = "{estimate} ({std.error}){stars}",
                                 statistic = NULL,
                                 title = "Table 5 HLM: Y1 Status predicting Log Annual Earnings", 
@@ -1235,9 +1195,8 @@ tbl6_unemp3_hlm <- modelsummary(list(unemp3_m1_hlm,
                                     unemp3_m9_hlm,
                                     unemp3_m10_hlm), 
                                coef_map = coef_map_unemp3, 
-                               add_rows = rows_to_add, 
-                               estimate = "{estimate} ({std.error}){stars}",
-                               statistic = NULL,
+                               estimate = "{estimate}{stars}",
+                               statistic = "({std.error})",
                                title = "Table 6 HLM: 3-month Unemployment predicting Log Annual Earnings", 
                                output = "huxtable",
                                notes = "Significance levels: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")
