removing age squared from models and no longer creating variable

--- a/3_working_paper_outputs_10hrs.qmd
+++ b/3_working_paper_outputs_10hrs.qmd
@@ -539,10 +539,9 @@ writeData(wb, tbl8_unemp, sheet = "Table 8 Unemp")
 ## Table 4 Earnings Unemployment models 
 ```{r unemployment earnings models }
 person_year <- person_year %>% 
-  mutate(age_sq = tage^2,
-         industry_numeric = as.numeric(mode_industry)) %>% 
-  set_variable_labels(age_sq = "Age Squared",
-                      industry_numeric = "Industry") 
+  mutate(
+    industry_numeric = as.numeric(mode_industry)) %>% 
+  set_variable_labels(industry_numeric = "Industry") 
 
 
 library(plm)
@@ -557,7 +556,6 @@ unemp_m2_plm <- plm(ln_tpearn_annual ~ unemp_f12_6  +
                    race_eth_fct_cpsd + 
                    educ_fct + 
                    tage + 
-                   age_sq + 
                    sex_fct + 
                    immig_fct + 
                    married + 
@@ -573,7 +571,6 @@ unemp_m2_plm <- plm(ln_tpearn_annual ~ unemp_f12_6  +
 #                    race_eth_fct_cpsd + 
 #                    educ_fct + 
 #                    tage + 
-#                    age_sq + 
 #                    sex_fct + 
 #                    immig_fct + 
 #                    married + 
@@ -616,7 +613,6 @@ mapping <- c(
   # Demographic Variables
   "sex_fctFemale" = "Female",
   "tage" = "Age", 
-  "age_sq" = "Age sq",
   "immig_fctImmigrant" = "Immigrant",
   "marriedMarried" = "Married",
   "parent_stdParent" = "Parent",
@@ -718,7 +714,6 @@ desired_order <- c(
   # Demographic Variables
   "sex_fctFemale",
   "tage" , 
-  "age_sq",
   "immig_fctImmigrant",
   "marriedMarried",
   "parent_stdParent",
@@ -850,7 +845,6 @@ status_m2_plm <- plm(ln_tpearn_annual ~ y1_status_v2  +
                    race_eth_fct_cpsd + 
                    educ_fct + 
                    tage + 
-                   age_sq + 
                    sex_fct + 
                    immig_fct + 
                    married + 
@@ -949,7 +943,6 @@ unemp3_m2_plm <- plm(ln_tpearn_annual ~ unemp_f12_3  +
                    race_eth_fct_cpsd + 
                    educ_fct + 
                    tage + 
-                   age_sq + 
                    sex_fct + 
                    immig_fct + 
                    married + 
@@ -1086,7 +1079,6 @@ unemp_m2_hlm <- lmer(ln_tpearn_annual ~ unemp_f12_6  +
                     race_eth_fct_cpsd + 
                     educ_fct + 
                     tage + 
-                    age_sq + 
                     sex_fct + 
                     immig_fct + 
                     married + 
@@ -1139,7 +1131,6 @@ status_m2_hlm <- lmer(ln_tpearn_annual ~ y1_status_v2  +
                     race_eth_fct_cpsd + 
                     educ_fct + 
                     tage + 
-                    age_sq + 
                     sex_fct + 
                     immig_fct + 
                     married + 
@@ -1192,7 +1183,6 @@ unemp3_m2_hlm <- lmer(ln_tpearn_annual ~ unemp_f12_3  +
                     race_eth_fct_cpsd + 
                     educ_fct + 
                     tage + 
-                    age_sq + 
                     sex_fct + 
                     immig_fct + 
                     married + 
